crates/ferrotype/tests/compile_fail/rpc_missing_return.rs
//! Test that rpc_method fails when return type is missing

use ferrotype::rpc_method;

struct Service;

impl Service {
    #[rpc_method]
    fn method(&self, request: String) {
        let _ = request;
    }
}

fn main() {}
