crates/ferrotype/tests/compile_fail/rpc_missing_return.stderr
error: RPC methods must have a return type
 --> tests/compile_fail/rpc_missing_return.rs:9:5
  |
9 |     fn method(&self, request: String) {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
